tests/baselines/reference/decrementAndIncrementOperators.errors.txt
tests/cases/compiler/decrementAndIncrementOperators.ts(4,1): error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.


==== tests/cases/compiler/decrementAndIncrementOperators.ts (1 errors) ====
    var x = 0;
    
    // errors
    1 ++;
    ~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    (1)++;
    (1)--;
    
    ++(1);
    --(1);
    
    (1 + 2)++;
    (1 + 2)--;
    
    ++(1 + 2);
    --(1 + 2);
    
    (x + x)++;
    (x + x)--;
    
    ++(x + x);
    --(x + x);
    
    //OK
    x++;
    x--;
    
    ++x;
    --x;
    
    (x)++;
    --(x);
    
    ((x))++;
    ((x))--;
    
    x[x++]++;
    